     of a Rule reference in places not previously possible (e.g. CMD and Ant).
   o Fully document the changed/new command line and Ant configuration options.
   o Need to enhance documentation to cover Global and Language specific
     function namespaces required for XPath 2.0 use (e.g. pmd:matches
     and pmd-java:typeof).


Fixed bug 1503099: InefficientStringBuffering bug false +
Fixed bug 3109408: String.InefficientStringBuffering false +
Fixed bug 3424397: Unable to parse
Fixed bug 3530124: pmd: parsing of generic method call with super fails
Fixed bug 3496028: pmd-4.2.6: MissingBreakInSwitch fails to report violation

May, 1, 2012 - 5.0.0:

Fixed bug 3515487: Inconsistent reference to ruleset file in documentation
Fixed bug 3470274: Using Label for lines in XMLRenderer
Fixed bug 3175710: NPE in InsufficientStringBufferDeclaration

CPD:
- Exit with status code 4 when CPD detects code duplication (Patch ID: 3497021)

January 31, 2012 - 5.0-alpha:

This version of PMD breaks API compatibility with prior versions of PMD, as well
as RuleSet XML compatibility. Also the maven coordinates (groupId) have been changed.
The decision to break compatibility, allows PMD
internals and code organization to be improved to better handle additional
languages.  This opportunity was used to remove depreciated APIs, and beat up
any code which has thumbed its nose at the developers over the years. ;)

The following is relatively complete list of the major changes (this may not be
100% accurate, see actual source code when in doubt):

Fixed bug (no number) - Fixed UseStringBufferLengthRule only worked once per class
All StringBuffer-related rules now also catch StringBuilder-related issues in the same way

	API Change - Unification of treatment of languages within PMD core:
	   Added - net.sourceforge.pmd.lang.Language (now an 'enum')
	   Added - net.sourceforge.pmd.lang.LanguageVersion
	   Added - net.sourceforge.pmd.lang.LanguageVersionDiscoverer