@@ -27,6 +27,7 @@ TODO - Release blockers - Must implement before this release can be finally fini
      and pmd-java:typeof).
 
 
+Fixed bug 3516101: InsufficientStringBufferDeclaration fails to parse hex
 Fixed bug 1503099: InefficientStringBuffering bug false +
 Fixed bug 3109408: String.InefficientStringBuffering false +
 Fixed bug 3424397: Unable to parse
